--- a/index.html
+++ b/index.html
@@ -1,19 +1,23 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
-    <title>Shiksha Sahayak</title>
+    <title>Shikshak Guide</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
-      @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Poppins:wght@500;600;700&display=swap');
+      @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Poppins:wght@500;600;700&family=Playfair+Display:wght@700&display=swap');
       body {
         font-family: 'Inter', sans-serif;
-        background-color: #FAFAFA;
+        background-color: #F0F4F8; /* Light Blue-Grey instead of plain white */
         -webkit-tap-highlight-color: transparent;
       }
       h1, h2, h3, h4, h5, h6 {
         font-family: 'Poppins', sans-serif;
+      }
+      .font-serif {
+        font-family: 'Playfair Display', serif;
       }
       /* Hide scrollbar for clean horizontal scrolling */
       .no-scrollbar::-webkit-scrollbar {
@@ -29,19 +33,26 @@
         theme: {
           extend: {
             colors: {
-              primary: '#FF6B6B', // Warm Coral
-              secondary: '#4ECDC4', // Calm Teal
-              accent: '#FFE66D', // Soft Gold
-              dark: '#2D3436', // Deep Charcoal
+              primary: '#4338ca', // Royal Indigo
+              secondary: '#ea580c', // Vibrant Orange
+              accent: '#fbbf24', // Royal Gold
+              dark: '#0f172a', // Midnight Blue (Rich Dark)
               gray: {
-                50: '#F9FAFB',
-                100: '#F3F4F6',
-                200: '#E5E7EB',
-                800: '#1F2937',
+                50: '#F8FAFC',
+                100: '#F1F5F9',
+                200: '#E2E8F0',
+                800: '#1E293B',
               }
             },
             animation: {
               'pulse-slow': 'pulse 3s cubic-bezier(0.4, 0, 0.6, 1) infinite',
+              'float': 'float 6s ease-in-out infinite',
+            },
+            keyframes: {
+              float: {
+                '0%, 100%': { transform: 'translateY(0)' },
+                '50%': { transform: 'translateY(-10px)' },
+              }
             }
           }
         }
